done about-section, fix some text alignament, add footer

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,24 @@ header{
     background-color: #1abc9c;
     color: white;
 }
+
+.about{
+    background-color: #1abc9c;
+    color: white;
+}
+
+
+.contact-me{
+    height: 200px;
+    width: 100%;
+}
+
+.location{
+    height: 300px;
+    background-color: #3a546d;
+}
+
+footer{
+    background-color: #2c3e50;
+    color: white;
+}
